# learnings

./: .gitignore
iac/namaste-world/: lookups.tf  main.tf
iac/namaste-world-module/: variables.tf
iac/namaste-world-module/examples/: .terraform.lock.hcl  main.tf  providers.tf
python/namaste-world/: main.py
rust/: README.md
rust/namaste-world/: Cargo.toml
rust/namaste-world/src/: main.rs
rust/qna-svc/: Cargo.toml
rust/qna-svc/src/: error.rs  main.rs  store.rs
rust/qna-svc/src/routes/: answer.rs  question.rs
rust/qna-svc/src/types/: answer.rs  question.rs
ts-js/todo/: Todos.json  package-lock.json
ts-js/todo/src/: index.ts  jsonTodoCollection.ts  todoCollection.ts  todoItem.ts
viz-signals/fluent-bit/namaste-fluent-bit/: Readme.md  namaste-with-health.yaml  namaste.yaml
